# vm_simulator

./: CMakeLists.txt  README.md  cpu.c  cpu.h  flag.c  flag.h  instructions_alu.c  instructions_alu.h  instructions_control.c  instructions_control.h  instructions_memory.c  instructions_memory.h  instructions_set.c  instructions_set.h  instructions_stack.c  instructions_stack.h  main.c  program_loader.c  program_loader.h  vm_config.h
tests/: CMakeLists.txt  test_alu.c  test_control.c  test_cpu.c  test_flag.c  test_framework.h  test_memory.c  test_program_loader.c  test_stack.c
